# Projeto-de-RTOS-2025.1-UFC

./: .README  CMakeLists.txt
docs/: teste_esp-01.py
inc/: Bluethooth.h  CMakeLists.txt  Timer.h  adc_custom.h  dht11.h  fonts.h  i2c.h  led.h  oled.h  power_management.h  servo_motor.h  webpage.h  wifi.h
lib/: FreeRTOSConfig.h
src/: Bluethooth.c  CMakeLists.txt  Timer.c  adc_custom.c  dht11.c  estufa_deep_sleep.c  fonts.c  i2c.c  led.c  main.c  oled.c  power_management.c  sensor_solo.c  servo_motor.c  wifi.c
